set up an api call to add data into the state. created ability to delete data in the state. orgnaized layout of page. added show and hide button capatibities to the api section

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+}
+.App-container , #userList{
+  width:80%;
+  margin:0 auto;
+}
+header{
+   text-align: center; 
+}
+ #form{
+  width:50%;
+  margin:0 auto;
+} 
+#userList{
+  margin-bottom:50px;
 }
 
